push map bolak balik error

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ProjectWPG
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/LevelMap/LV_MainMenu/LV_MainMenu.LV_MainMenu
+EditorStartupMap=/Game/LevelMap/LV_3DMainMenu/LV_3DMainMenu.LV_3DMainMenu
+GameDefaultMap=/Game/LevelMap/LV_3DMainMenu/LV_3DMainMenu.LV_3DMainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
